--- a/src/components/GoogleCalendar/styles.css
+++ b/src/components/GoogleCalendar/styles.css
@@ -1,3 +1,5 @@
+
+
 body {
     margin: 0px;
     background-color: #f8f9fa;
@@ -32,4 +34,10 @@ body {
     border-radius: 4px;
     padding: 2px;
     font-size: 12px;
+    cursor: pointer;
+    transition: transform 0.1s ease-in;
+}
+
+.event:hover {
+    transform: scale(1.03);
 }
